# bookclub_admin

./: README.md
backend/: .env  .gitignore  Cargo.toml  Dockerfile
backend/migrations/2019-07-12-154333_books/: up.sql
backend/src/: main.rs  models.rs  schema.rs
