[package]
name = "bookclub_backend"
version = "0.1.0"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }