[package]
name = "bookclub_backend"
version = "0.1.0"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version="0.8.2", features=["http"] }
actix-web = { version="1.0.0-rc", default-features = false }
actix-http = { version="0.2.1", default-features = false }
actix-rt = "0.2.2"
actix-codec = "0.1.2"
actix-server = "0.5.1"
actix-service = "0.4.0"
jemallocator = "0.3.0"
askama = "0.8"
markup = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
env_logger = "0.6"
rand = "0.5"
bytes = "0.4"
num_cpus = "1.0"
futures = "0.1.25"
http = "0.1"
url = { version="1.7", features=["query_encoding"] }
log = { version = "0.4", features = ["release_max_level_off"] }
v_htmlescape = "0.4"
tokio-tcp = "0.1"